test/compile_errors/iterator_non_slice.zig
const fits = @import("zigfitsio");

comptime {
    _ = fits.Iterator(struct {
        x: i32,
    }, error{});
}
